--- a/index.Rmd
+++ b/index.Rmd
@@ -3,14 +3,15 @@ title: "SQL"
 output: html_document
 ---
 
-##filtering rows and comlums 
-with Sql you can filter coloumns with Select and Rows with Where. Let us look at an example wusing Lahman baseball database. First, we need to need to load some packages. 
+filtering rows and comlums 
+With SQL we can filter coloumns with SELECT and rows with WHERE. To show this I will use the Lahman package on RStudio, which is a baseball database. First, we need to need to install two packages: Lahman and sqldf. 
+
 
 ```{r warning=FALSE, message=FALSE}
 library(Lahman)
 library(sqldf)
 ```
-r
+
 Suppose we want to see the total number of homeruns for the Yankees in 1927. We could write the following
 ```{r}
 query<-"SELECT playerID,yearID,teamID,HR From Batting
